1) При наведении на меню сайта цвет ссылок должен меняться на произвольный. 2) На всех страницах создать блок с классом «header», содержащий: 2.1) логотип вашего интернет магазина; 2.2) меню сайта. 3) Создать блок с классом «footer» и разместить в него содержимое футера. 4) При вводе текста в поле «Email» на странице контактной информации поменять цвет текста и цвет поля. 5) При вводе текста в текстовые поля каждое слово должно начинаться с заглавной буквы, даже если пользователь будет вводить со строчной. 6) На странице товара каталога: 6.1) Под заголовком «технические характеристики» разместить таблицу, размером не меньше 2*3 (есть задание *); 6.2) Записать в таблицу произвольные технические характеристики вашего товара; 6.3) Если технических характеристик нет, добавьте таблицу с любыми параметрами по вашему выбору. 7) *При наведении курсора на изображения в разделе просмотра товара и подробного описания необходимо сделать так, чтобы рамка исчезала, но сама картинка при этом не смещалась. 8) *На странице просмотра товара каталога в каждом параграфе выделить первую букву первого слова другим шрифтом и размером. 9) * Создать таблицу размером не менее 4*5. 10) * Объединить несколько ячеек как по горизонтали, так и по вертикали. 11) * Задать высоту для верхней строки таблицы, отличную от всех остальных.
Задачи со * предназначены для продвинутых учеников, которым мало сделать обычное ДЗ.

--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,34 @@ body {
 }
 
 .menu__link {
-    color: #6610f2;
+    color: #483dbf;
     font: small-caps bold 16px Tahoma, Arial, Verdana;
+    text-decoration: none;
+}
+
+.menu__link:hover {
+    color: #8b2496;
+    text-decoration: underline;
+}
+
+.menu__link:hover::after {
+    content: " >>";
+    font-size: 12px;
+
+}
+
+.logo {
+    width: 200px;
+    border: 2px outset grey;
+    border-radius: 80px;
+    padding: 5px;
+}
+
+.logo:hover {
+    width: 210px;
+    padding: 0px;
+    border-color: #8b2496;
+
 }
 
 .product {
@@ -35,6 +61,11 @@ body {
     font-weight: 400;
     background-color: #eaeaea;
     font-variant: small-caps;
+}
+
+.product p:first-letter {
+    font-size: 30px;
+    font-family: monospace;
 }
 
 .brief {
@@ -67,6 +98,10 @@ body {
     font-family: Tahoma !important;
 }
 
+.contacts [type="text"] {
+    text-transform: capitalize;
+}
+
 .contacts input[type="email"] {
     border: 1px solid #cccccc;
     height: 18px;
@@ -76,12 +111,27 @@ body {
     font-family: Tahoma !important;
 }
 
+.contacts input[type="email"]:focus {
+
+    color: white;
+    font-size: 18px;
+    font-family: Tahoma !important;
+    background: black;
+}
+
 .contacts {
     font-family: Tahoma, Arial, Verdana;
 }
 
 .preview {
     border: 7px outset grey;
+    width: 400px;
+}
+
+.preview:hover {
+    border: none;
+    width: 400px;
+    padding: 7px;
 }
 
 .catalog {
@@ -103,4 +153,25 @@ button[type="reset"] {
     width: 150px;
     height: 40px;
     font-size: 16px;
+}
+
+.feature_table {
+    border-collapse: collapse;
+    border: 3px solid grey;
+    text-align: center;
+}
+
+.feature_table th,
+td {
+    border: 1px solid grey;
+    padding: 15px;
+}
+
+.bonus_cards {
+    text-align: center;
+    vertical-align: middle;
+}
+
+.bonus_cards tr:first-child {
+    height: 70px;
 }
