--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ body {
     justify-content: space-between;
     align-items: center;
     height: 130px;
+    background-image: url('../catalog/img/header_fon.png')
 }
 
 .footer {
@@ -32,6 +33,8 @@ body {
     border-radius: 20px;
     align-items: center;
     height: 40px;
+    background: white;
+    margin-right: 20px;
 
 }
 
@@ -40,10 +43,12 @@ body {
     border: 2px outset grey;
     border-radius: 80px;
     padding: 5px;
+    background: white;
 }
 
 .logo {
     margin-left: 20px;
+    
 }
 
 .logo img:hover {
