--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@ body {
     font-family: monospace;
 }
 
-.brief {
+.brief p{
     color: #707070;
     font-size: 14px;
     font-style: italic;
