--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ body {
 
 .logo {
     margin-left: 20px;
-    
+
 }
 
 .logo img:hover {
@@ -117,7 +117,7 @@ body {
     font-family: monospace;
 }
 
-.brief p{
+.brief p {
     color: #707070;
     font-size: 14px;
     font-style: italic;
@@ -137,9 +137,7 @@ body {
     text-align: left;
 }
 
-.feature li {
-    
-}
+.feature li {}
 
 .contacts input[type="text"] {
     border: 1px solid #cccccc;
@@ -258,7 +256,8 @@ td {
 }
 
 /* Кнопка купить */
-.button_buy {
+.button_buy,
+button {
     font-weight: 700;
     color: white;
     text-decoration: none;
@@ -267,17 +266,20 @@ td {
     border-radius: 20px;
     background: #636cf9;
     font-size: 18px;
-    
+
 }
 
-.button_buy:hover {
+.button_buy:hover,
+button:hover {
     background: #505bf3;
 }
 
-.button_buy:active {
+.button_buy:active,
+button:active {
     background: #0a1aef;
 }
-.buy{
+
+.buy {
     padding-top: 10px;
-    
+
 }
