--- a/css/style.css
+++ b/css/style.css
@@ -257,7 +257,7 @@ td {
     padding: 10px;
 }
 
-/* Кнопка купить */
+/* Кнопка купить товар */
 .button_buy {
     font-weight: 700;
     color: white;
