--- a/style.css
+++ b/style.css
@@ -4,8 +4,9 @@
 
 }
 
-body {
+html, body {
     font-family: 'Montserrat', sans-serif;
+    height: 100%;
 }
 
 a {
@@ -13,8 +14,8 @@ a {
 }
 
 .container {
-    width: 1366px;
-    margin: 0 auto;
+    
+    flex: 1 0 auto;
 }
 
 .logo {
@@ -468,6 +469,7 @@ a {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    flex: 0 0 auto;
 }
 
 .fotter-button-social {
@@ -892,4 +894,12 @@ text-transform: uppercase;
 
 .explore__all-p {
     margin-right: 12px;
+}
+
+.wrapper {
+    display:flex;
+    flex-direction: column;
+    height: 100%;
+    width: 1366px;
+    margin: 0 auto;
 }
