--- a/style.css
+++ b/style.css
@@ -289,7 +289,7 @@ a {
 
 .promo-content_box {
     position: absolute;
-    width: 683px;
+    width: 664px;
     height: 683px;
     top: 0px;
     left: 0px;
@@ -347,6 +347,10 @@ a {
 .product-catalog__link {
     display: block;
     margin-top: 30px;
+}
+
+.product-catalog__link:hover {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .product-catalog_box {
@@ -471,7 +475,7 @@ a {
 
 .footer {
     background-color: #f7f7f7;
-    height: 384px;
+    min-height: 384px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -563,6 +567,10 @@ a {
     font-weight: 700;
     text-transform: uppercase;
 }
+.fotter-conditions:hover{
+    opacity: 0.8;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+}
 
 .fotter-information-colum-link {
     color: #212121;
@@ -570,6 +578,10 @@ a {
     font-weight: 700;
     text-transform: uppercase;
 
+}
+
+.fotter-information-colum-link:hover {
+    opacity: 0.6;
 }
 
 .suscribe-input {
@@ -702,12 +714,23 @@ a {
     margin-top: 30px;
 }
 
+.output-module_products__link:hover {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
 .buttom-load {
     display: block;
-    margin-top: 71px;
-    margin-bottom: 140px;
+    
     display: flex;
     justify-content: center;
+    width: 50px;
+    align-items: center;
+    margin: 0 auto;
+    margin-top: 71px;
+    margin-bottom: 140px;
+}
+.buttom-load:hover img{
+    opacity: 0.7;
 }
 
 .contacts-header-h2 {
